fix care-tracker graph button overlap issues. fix some printing issues

--- a/src/main/frontend/src/record/tracker/careTracker/components/careTrackerItem/_careTrackerItem.scss
+++ b/src/main/frontend/src/record/tracker/careTracker/components/careTrackerItem/_careTrackerItem.scss
@@ -32,12 +32,6 @@
 		margin: 8px 2px 0 2px;
 	}
 
-	.graphing-button-container {
-		position: absolute;
-		top: 4px;
-		right: 4px;
-	}
-
 	@media print {
 		page-break-inside: avoid;
 
